# digx

./: CMakeLists.txt  CMakePresets.json
assets/: resources.hpp  resources.rc
assets/textures/: blink.dds  diamond-blue.dds  diamond-green.dds  diamond-orange.dds  diamond-purple.dds  digged.dds  dirt-breaking-1.dds  dirt-breaking-2.dds  dirt-breaking-3.dds  dirt.dds  dragon-green.dds  dragon-red.dds  dragon.dds  garlic.dds  goblin-digging-down-shovel-2.dds  goblin-digging-up-shovel-1.dds  goblin-running-down-pickaxe.dds  goblin-running-down-shovel.dds  goblin-running-up-pickaxe.dds  goblin-running-up-shovel.dds  header.dds  lamp.dds  mummy-back.dds  mummy-front.dds  mummy-side.dds  mummy.dds  onion.dds  soldier.dds  stone-1.dds  stone-2.dds  stone-3.dds  stone-4.dds  vampire-sleeping.dds  vampire-triggered.dds  vampire.dds
include/: digx-game.hpp
include/entities/: digx-dragon.hpp  digx-enemy-base.hpp  digx-mummy.hpp  digx-player.hpp  digx-soldier.hpp  digx-stone.hpp  digx-vampire.hpp
include/items/: digx-diamond.hpp  digx-exit-door.hpp  digx-garlic-bulb.hpp  digx-gold-coin.hpp  digx-lamp.hpp  digx-onion-bulb.hpp  digx-pickaxe.hpp
include/levels/: digx-button.hpp  digx-level.hpp  digx-main-menu.hpp
source/: main.cpp
source/entities/: digx-dragon.cpp  digx-enemy-base.cpp  digx-mummy.cpp  digx-player.cpp  digx-soldier.cpp  digx-stone.cpp  digx-vampire.cpp
source/items/: digx-diamond.cpp  digx-garlic-bulb.cpp  digx-gold-coin.cpp  digx-lamp.cpp  digx-onion-bulb.cpp  digx-pickaxe.cpp
source/levels/: digx-level.cpp  digx-main-menu.cpp
